--- a/db.html
+++ b/db.html
@@ -91,13 +91,13 @@
         </button>
         <div class="">
           <div class="navbar-nav">
-          <a  id="a4"class="navbar-brand text-light" href="index.php">
+          <a  id="a4"class="navbar-brand text-light" href="index.html">
       <img id="img2" src="bootstrap-logo.svg " alt="Logo" width="30" height="24" class="d-inline-block align-text-top  " > AOI</a>
-          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="index.php" >หน้าหลัก</a>
-          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="db.php" >เนื้อหาบทเรียน</a>
-          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="pic.php">ข้อมูลทั่วไป</a>
-            <a class="nav-link text-light bg-body-tertiary text-dark" href="paisan.php">คณะที่ปรึกษา</a>
-            <a class="nav-link text-light bg-body-tertiary text-dark" href="name.php">คณะผู้จัดทำ</a>
+          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="index.html" >หน้าหลัก</a>
+          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="db.html" >เนื้อหาบทเรียน</a>
+          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="pic.html">ข้อมูลทั่วไป</a>
+            <a class="nav-link text-light bg-body-tertiary text-dark" href="paisan.html">คณะที่ปรึกษา</a>
+            <a class="nav-link text-light bg-body-tertiary text-dark" href="name.html">คณะผู้จัดทำ</a>
           </div>
         </div>
       </div>
@@ -120,16 +120,16 @@
     <h1>-บทเรียนที่หน้าสนใจ-</h1>
     <h4>บทที่1</h4>
       
-    <a href="python.php" class="cool-button" style="height: 50px; width: 50%; font-weight: bold;" >-Python คืออะไร-</a>
+    <a href="python.html" class="cool-button" style="height: 50px; width: 50%; font-weight: bold;" >-Python คืออะไร-</a>
     <br><br>
     <h4>บทที่2</h4>
-      <a href="class.php" class="cool-button" style="height: 50px; width: 50%; font-weight: bold;">(Classes & Objects)คือ อะไร-</a>
+      <a href="class.html" class="cool-button" style="height: 50px; width: 50%; font-weight: bold;">(Classes & Objects)คือ อะไร-</a>
       <br><br>
     <h4>บทที่3</h4>
-      <a href="lf.php" class="cool-button" style="height: 50px; width: 50%; font-weight: bold;">-IF else elif ใช้ยังไง-</a>
+      <a href="lf.html" class="cool-button" style="height: 50px; width: 50%; font-weight: bold;">-IF else elif ใช้ยังไง-</a>
       <br><br>
       <h4>บทที่4</h4>
-      <a href="while loop.php" class="cool-button" style="height: 50px; width: 50%; font-weight: bold;">-สอนใช้ while loop-</a>
+      <a href="while loop.html" class="cool-button" style="height: 50px; width: 50%; font-weight: bold;">-สอนใช้ while loop-</a>
     </div>
 
   </body>
