--- a/name.html
+++ b/name.html
@@ -63,13 +63,13 @@
         </button>
         <div class="">
           <div class="navbar-nav">
-          <a  id="a4"class="navbar-brand text-light" href="index.php">
+          <a  id="a4"class="navbar-brand text-light" href="index.html">
       <img id="img2" src="bootstrap-logo.svg " alt="Logo" width="30" height="24" class="d-inline-block align-text-top  " > AOI</a>
-          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="index.php" >หน้าหลัก</a>
-          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="db.php" >เนื้อหาบทเรียน</a>
-          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="pic.php">ข้อมูลทั่วไป</a>
-            <a class="nav-link text-light bg-body-tertiary text-dark" href="paisan.php">คณะที่ปรึกษา</a>
-            <a class="nav-link text-light bg-body-tertiary text-dark" href="name.php">คณะผู้จัดทำ</a>
+          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="index.html" >หน้าหลัก</a>
+          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="db.html" >เนื้อหาบทเรียน</a>
+          <a class="nav-link active  bg-body-tertiary text-dark" aria-current="page" href="pic.html">ข้อมูลทั่วไป</a>
+            <a class="nav-link text-light bg-body-tertiary text-dark" href="paisan.html">คณะที่ปรึกษา</a>
+            <a class="nav-link text-light bg-body-tertiary text-dark" href="name.html">คณะผู้จัดทำ</a>
           </div>
         </div>
       </div>
