--- a/python.html
+++ b/python.html
@@ -87,9 +87,9 @@
 <form class="container-fluid nav justify-content-center ">
     <a href="https://forms.gle/V2p5jqAChDsPG2Xa6" target="_blank" id="button3" class="btn btn-outline-success " type="button" href="db.php" >แบบทดสอบก่อนเรียน</a><nav class="navbar ">
   <form class="container-fluid nav justify-content-center ">
-    <a id="button3" href="content.php" class="btn btn-outline-success " type="button">เนื้อหา</a><nav class="navbar ">
+    <a id="button3" href="content.html" class="btn btn-outline-success " type="button">เนื้อหา</a><nav class="navbar ">
   <form  class="container-fluid nav justify-content-center ">
-  <a  href="https://youtube.com/@DS_MH?si=J0hOfsbZ0DYsKR3E" target="_blank" id="button3" class="btn btn-outline-success " type="button">Youtube</a><nav class="navbar ">
+  <a  href="https://www.youtube.com/channel/UCff5Tebg3Y9cfyHDNXJ4GEQ" target="_blank" id="button3" class="btn btn-outline-success " type="button">Youtube</a><nav class="navbar ">
   <form  class="container-fluid nav justify-content-center ">
     <a href="https://forms.gle/aDp2iiXBxDkpizCk6" target="_blank" id="button3" class="btn btn-outline-success " type="button">แบบทดสอบหลังเรียน</a>
   </form>
